# ethel

./: Cargo.toml  README.md  build.rs
benches/: column.rs
src/: lib.rs  main.rs  mesh.rs  profile.rs  render.rs
src/assets/: mod.rs  pipe.rs  strings.rs
src/render/: command.rs  data.rs  mod.rs  sync.rs
src/render/buffer/: immutable.rs  layout.rs  mod.rs  partitioned.rs
src/shader/: base.fsh  base.vsh  glsl.rs  header.rs  mod.rs  uniform.rs
src/state/: buffer.rs  camera.rs  column.rs  cross.rs  mod.rs  table.rs  time.rs  triple_buffer.rs
src/state/data/: column.rs  hash.rs  mod.rs  table.rs
