[package]
name = "ethel"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "=0.31.0"
indoc = "2.0.7"
janus = { path = "../janus", features = ["expose_gl", "render", "input"] }
paste = "1.0.15"
postcard = { version = "1.1.3", optional = true, features = ["alloc"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", optional = true, features = ["derive"] }
sysinfo = { version = "0.38.4", optional = true }
tracing = "0.1.44"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "column"
harness = false

[features]
default = []
profile = [ "dep:serde", "dep:postcard", "dep:sysinfo"]
